fix padding on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -249,7 +249,7 @@ html {
   height: 100%;
   width: 38%;
   min-width: 300px;
-  margin: 0 100px;
+  padding: 0 100px;
 }
 
 @media screen and (max-width: 320px) {
@@ -258,6 +258,7 @@ html {
   }
   .column {
     background-color: none;
+    padding: 0;
   }
 }
 
